@@ -17,7 +17,7 @@ package Apache::Reload;
 
 use strict;
 
-$Apache::Reload::VERSION = '0.11';
+$Apache::Reload::VERSION = '0.11-dev';
 
 use vars qw(%INCS %Stat $TouchTime %UndefFields);
 
